--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,15 @@
 				<version>3.0.0</version>
 			</plugin>
 			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
+				
+
+			<groupId>org.mule.tools.maven</groupId>
+
+			<artifactId>mule-maven-plugin</artifactId>
+
+			<version>3.3.5</version>
+
+
 				<extensions>true</extensions>
 				<configuration>
                        <cloudHubDeployment>
